# memSu

./: .gitignore  PLAN.md  PLAN_AUTO.md  PLAN_V2.md  PLAN_V3.md  PLAN_V4.md  README.md  ROADMAP.md  pyproject.toml
docs/: adapters.md  advance.md  agent-guide.md  curator.md  hardening.md  inbox.md  observe.md  policy.md  tasks.md
hermes/plugins/memory/memsu/: __init__.py  plugin.yaml
hermes/prompts/: bootstrap-hermes-memsu.md
hermes/skills/memory-audit/: SKILL.md
hermes/skills/memory-capture/: SKILL.md
hermes/skills/observe-to-proposals/: SKILL.md
hermes/skills/proactive-policy/: SKILL.md
memsu/: __init__.py  adapters.py  advance.py  agent_guide.py  agent_observe.py  capabilities.py  cli.py  curator.py  discovery.py  extractor.py  hardening.py  inbox.py  inspire.py  logging_utils.py  observe.py  paths.py  policy.py  server.py  store.py  tasks.py  vector.py
scripts/: doctor.ps1  install_hermes.ps1  install_windows_task.ps1  start_service.ps1  status_service.ps1  uninstall_windows_task.ps1
tests/: test_adapters.py  test_advance.py  test_agent_guide.py  test_agent_observe.py  test_curator.py  test_discovery.py  test_extractor.py  test_hardening.py  test_inbox.py  test_inspire.py  test_observe.py  test_policy.py  test_provider.py  test_store.py  test_tasks.py
